Remove auto margin from desktop nav to fix burger alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -98,7 +98,6 @@ a:hover {
 .desktop-nav {
   display: flex;
   gap: 28px;
-  margin-left: auto;
 }
 
 .desktop-nav a {
